--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
         
     </div>
     <!-- end of cart -->
+    <!-- contentful -->
+    <script src="https://cdn.jsdelivr.net/np,/contentful@latest/dist/contentful.browser.min.js"></script>
+    <!-- application code -->
     <script src="app.js"></script>
 </body>
 
